--- a/lib/lang/lang.csv
+++ b/lib/lang/lang.csv
@@ -192,7 +192,7 @@ __BU_MAIN_INPUTS_LIB__MSG__INVALID_ANSWER,This variable stores the message that,
 __BU_MAIN_INPUTS_LIB__MSG__ASK_CONTINUE_EXEC,This variable stores the message that,Do you want to continue the script's execution ? (yes / no),Voulez-vous continuer l'exécution du script ? (oui / non),,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 __BU_MAIN_INPUTS_LIB__MSG__ANSWER_PROMPT,This variable stores the message that,Enter your answer :,Entrez votre réponse,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 __BU_MAIN_INPUTS_LIB__MSG__RESUME_EXEC,This variable stores the message that,"Resuming the execution of the $(BU.Main.Decho.Decho.Highlight ""$__BU_MAIN_PROJECT_NAME"") script",Reprise de l'exécution du script %s,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-__BU_MAIN_INPUTS_LIB__MSG__CANCEL_EXEC,This variable stores the message that,"Aborting the $(BU.Main.Decho.Decho.Highlight ""$__BU_MAIN_PROJECT_NAME"")'s execution",Abandon de l'exécution du projet %s,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+__BU_MAIN_INPUTS_LIB__MSG__CANCEL_EXEC,This variable stores the message that,"Terminating the $(BU.Main.Decho.Decho.Highlight ""$__BU_MAIN_PROJECT_NAME"")'s execution",Abandon de l'exécution du projet %s,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 __BU_MAIN_CHECKINGS_LIB__MSG__IsDateYMD_HMS__DATE_BAD_TIMESTAMP_FORMAT,This variable stores the message that,Warning : the date is not formatted in a correct timestamp,Attention : la date n'est pas formatée dans un timestamp correct,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
