Adding new languages in the docs folder

--- a/docs/fr/Introduction.tex
+++ b/docs/fr/Introduction.tex
@@ -170,7 +170,7 @@
     \subsubsection{docs}\color{text}
 
     \begin{justify}
-        Ce dossier contient toute la documentation utile aux développeurs et aux utilisateurs.
+        Ce dossier contient toute la documentation utile aux développeurs et aux utilisateurs, disponible en plusieurs langues.
     \end{justify}
 
     % ------------
@@ -231,6 +231,8 @@
         Les différences entre les fichiers des deux sous-dossiers mentionnés ci-dessus sont expliquées dans la section \textbf{\color{sec2}Bash-utils-(stable)-lang.sh\color{text}}
     \end{justify}
 
+    \par\noindent\rule{\textwidth}{0.4pt}
+
     \paragraph{functions}\mbox{}\\\mbox{}
 
     Chaque sous-dossier est lié à un module et contient les fichiers source de ce dernier.
@@ -273,6 +275,8 @@
 
         \begin{itemize}
             \item \textbf{\color{path}dev-tools\color{text} :} Ce dossier contient des scripts aidant au développement de la librairie, avec leurs dépendances (fichiers binaires, fichiers raccourcis \textbf{desktop}, icônes et fichiers sources dans le cas où un fichier serait trop long).\\\mbox{}
+
+            \item \textbf{\color{path}graphs\color{text} :} Ce dossier contient des graphiques (faits avec le logiciel Draw.io) servant à visualiser l'architecture du fonctionnement d'un composant du framework.\\\mbox{}
 
             \item \textbf{\color{path}ideas\color{text} :} Ce dossier contient des fichiers où j'écris mes idées de fonctionnalités à implémenter dans la librairie.\\\mbox{}
 
