Adding a commented title in many English LaTeX files in order to generate a hash with the "docs_filename_hash.py" script, with the objective to better find a translated version of each file in other languages

--- a/docs/en/modules/04) Functions/main/Locale.tex
+++ b/docs/en/modules/04) Functions/main/Locale.tex
@@ -19,6 +19,13 @@
 \usepackage[a4paper,margin=1in,footskip=0.25in]{geometry}	% Document layout.
 
 
+% -------------------------------------------------------------------------------------------------
+% Writing the name of this file here in order to get it into the "docs_filename_hash.py" script and
+% create a hash in order to better find its translated versions in the other languages folders.
+
+% Title for hashing : Locale.tex
+
+
 % --------------------------------------------------------------------------------------------------
 % List of defined colors (for the layout and for changing the theme for printing the documentation).
 
