Improved the hash code system

--- a/docs/en/modules/04) Functions/main/Time.tex
+++ b/docs/en/modules/04) Functions/main/Time.tex
@@ -23,7 +23,7 @@
 % Writing the name of this file here in order to get it into the "docs_filename_hash.py" script and
 % create a hash in order to better find its translated versions in the other languages folders.
 
-% Title for hashing : Time.tex
+% Title for hashing : "Bash-utils/docs/en/modules/04) Functions/main/Time.tex"
 
 
 % --------------------------------------------------------------------------------------------------
