Added the "en/modules/Functioning of the modules manager - 250CD.tex" file

--- a/docs/en/modules/Functioning of the modules manager - 250CD.tex
+++ b/docs/en/modules/Functioning of the modules manager - 250CD.tex
@@ -23,7 +23,7 @@
 % Writing the name of this file here in order to get it into the "docs_filename_hash.py" script and
 % create a hash in order to better find its translated versions in the other languages folders.
 
-% Title for hashing : "Bash-utils/docs/en/Introduction to Bash Utils.tex"
+% Title for hashing : "Bash-utils/docs/en/Functioning of the modules manager.tex"
 
 
 % --------------------------------------------------------------------------------------------------
@@ -59,16 +59,16 @@
 % -----------------------------------------------
 % Definition of the informations of the document.
 
-\title{\color{red}Introduction to Bash Utils}\color{text}
+\title{\color{red}Functioning of the modules manager}\color{text}
 \author{Dimitri OBEID}
 \pagestyle{fancy}
 
 \pdfinfo{
-  /Title    (Introduction to Bash Utils)
+  /Title    (Functioning of the modules manager)
   /Author   (Dimitri OBEID)
   /Creator  (Dimitri OBEID)
   /Producer (Dimitri OBEID)
-  /Subject  (Introduction to Bash Utils)
+  /Subject  (Functioning of the modules manager)
   /Keywords ()
 }
 
@@ -88,6 +88,6 @@
 
     \hypertarget{contents}{}
     \tableofcontents
+    \newpage
 
 \end{document}
-
