--- a/docs/de/Farbcode.tex
+++ b/docs/de/Farbcode.tex
@@ -81,6 +81,10 @@
     \maketitle
     \newpage
 
+    \hypertarget{contents}{}
+    \tableofcontents
+    \newpage
+
     \color{sec1}
     \section{Farben der Dokumentation im ``normalen'' Format}\color{text}
 
