--- a/docs/en/Color code - DF331.tex
+++ b/docs/en/Color code - DF331.tex
@@ -86,6 +86,10 @@
     \maketitle
     \newpage
 
+    \hypertarget{contents}{}
+    \tableofcontents
+    \newpage
+
     \color{sec1}
     \section{Colors of the documentation into "normal" format}\color{text}
 
