--- a/docs/fr/Code couleur - DF331.tex
+++ b/docs/fr/Code couleur - DF331.tex
@@ -81,6 +81,10 @@
     \maketitle
     \newpage
 
+    \hypertarget{contents}{}
+    \tableofcontents
+    \newpage
+
     \color{sec1}
     \section{Couleurs de la documentation au format "normal"}\color{text}
 
