--- a/docs/en/modules/04) Functions/main/Text - D1630.tex
+++ b/docs/en/modules/04) Functions/main/Text - D1630.tex
@@ -86,6 +86,10 @@
     \maketitle
     \newpage
 
+    \hypertarget{contents}{}
+    \tableofcontents
+    \newpage
+
     \color{sec1}
     \section{}\color{text}
 \end{document}
