--- a/docs/sv/Färgkod.tex
+++ b/docs/sv/Färgkod.tex
@@ -80,6 +80,10 @@
     \maketitle
     \newpage
 
+    \hypertarget{contents}{}
+    \tableofcontents
+    \newpage
+
     \color{sec1}
     \section{Färger på dokumentationen i ``normalt'' format}\color{text}
 
