Added more comments

--- a/docs/en/modules/01) InitScript/Functions - 4EEA3.tex
+++ b/docs/en/modules/01) InitScript/Functions - 4EEA3.tex
@@ -23,6 +23,9 @@
 % Writing the name of this file here in order to get it into the "docs_filename_hash.py" script and
 % create a hash in order to better find its translated versions in the other languages folders.
 
+% There is no need to copy this part in the translated versions of this document,
+% since the aforementioned script only processes the English documentation files.
+
 % Title for hashing : "Bash-utils/docs/en/modules/01) InitScript/Functions.tex"
 
 
