--- a/docs/en/modules/02) Config/Hardware/Module-conf - D8C8E.tex
+++ b/docs/en/modules/02) Config/Hardware/Module-conf - D8C8E.tex
@@ -26,7 +26,7 @@
 % There is no need to copy this part in the translated versions of this document,
 % since the aforementioned script only processes the English documentation files.
 
-% Title for hashing : "Bash-utils/docs/en/modules/02) Config/main/Module-conf.tex"
+% Title for hashing : "Bash-utils/docs/en/modules/02) Config/Hardware/Module-conf.tex"
 
 
 % --------------------------------------------------------------------------------------------------
@@ -62,17 +62,16 @@
 % -----------------------------------------------
 % Definition of the informations of the document.
 
-\title{\color{sec1}Functions and variables of the \color{path}Module.conf\color{sec1}\\configuration file from the \color{sec2}main\color{sec1}\ module}\color{text}
+\title{\color{sec1}Functions and variables of the \color{path}Module.conf\color{sec1}\\configuration file from the \color{sec2}Hardware\color{sec1}\ module}\color{text}
 \author{Dimitri OBEID}
-\date{2023}
 \pagestyle{fancy}
 
 \pdfinfo{
-  /Title    (Functions and variables of the "Module.conf" configuration file from the main module)
+  /Title    (Functions and variables of the "Module.conf" configuration file from the "Hardware" module)
   /Author   (Dimitri OBEID)
   /Creator  (Dimitri OBEID)
   /Producer (Dimitri OBEID)
-  /Subject  (Functions and variables of the "Module.conf" configuration file from the main module)
+  /Subject  (Functions and variables of the "Module.conf" configuration file from the "Hardware" module)
   /Keywords ()
 }
 
@@ -81,8 +80,6 @@
 % Paragraph layout.
 
 \setlength{\parskip}{1em}
-
-\setlength{\headheight}{13pt}
 
 
 % --------------------------
@@ -96,9 +93,5 @@
     \tableofcontents
     \newpage
 
-    \color{sec1}
-    \section{Presentation}\color{text}
-
-    \color{sec2}
-    \subsection{Description}\color{text}
 \end{document}
+
