--- a/docs/en/devtools/bin-generation - 70FB9.tex
+++ b/docs/en/devtools/bin-generation - 70FB9.tex
@@ -26,7 +26,7 @@
 % There is no need to copy this part in the translated versions of this document,
 % since the aforementioned script only processes the English documentation files.
 
-% Title for hashing : .tex
+% Title for hashing : "Bash-utils/docs/en/devtools/bin-generation.tex"
 
 
 % --------------------------------------------------------------------------------------------------
