--- a/docs/en/devtools/lib-compilerV3 - B2212.tex
+++ b/docs/en/devtools/lib-compilerV3 - B2212.tex
@@ -26,7 +26,7 @@
 % There is no need to copy this part in the translated versions of this document,
 % since the aforementioned script only processes the English documentation files.
 
-% Title for hashing : .tex
+% Title for hashing : "Bash-utils/docs/en/devtools/lib-compilerV3.tex"
 
 
 % --------------------------------------------------------------------------------------------------
@@ -62,16 +62,16 @@
 % -----------------------------------------------
 % Definition of the informations of the document.
 
-\title{\color{sec1}Bash Utils framework }\color{text}
+\title{\color{sec1}Bash Utils framework compiler documentation}\color{text}
 \author{Dimitri OBEID}
 \pagestyle{fancy}
 
 \pdfinfo{
-  /Title    (Bash Utils framework )
+  /Title    (Bash Utils framework compiler documentation)
   /Author   (Dimitri OBEID)
   /Creator  (Dimitri OBEID)
   /Producer (Dimitri OBEID)
-  /Subject  (Bash Utils framework )
+  /Subject  (Bash Utils framework compiler documentation)
   /Keywords ()
 }
 
