--- a/docs/fr/devtools/256-color-palette.tex
+++ b/docs/fr/devtools/256-color-palette.tex
@@ -73,16 +73,16 @@
 % ----------------------------------------
 % Définition des informations du document.
 
-\title{\color{sec1}Fonctionnement }\color{text}
+\title{\color{sec1}Fonctionnement du script\\ \color{sec2}256-color-palette.sh\color{sec1}}\color{text}
 \author{Dimitri OBEID}
 \pagestyle{fancy}
 
 \pdfinfo{
-  /Title    (Fonctionnement )
+  /Title    (Fonctionnement du script 256-color-palette.sh)
   /Author   (Dimitri OBEID)
   /Creator  (Dimitri OBEID)
   /Producer (Dimitri OBEID)
-  /Subject  (Fonctionnement )
+  /Subject  (Fonctionnement du script 256-color-palette.sh)
   /Keywords ()
 }
 
@@ -126,8 +126,13 @@
     \subsection{Fonctionnement du script}\color{text}
 
     \begin{justify}
-
+        En cas de passage de la valeur "-h" ou "--help" en premier argument, un simple message résumant de manière très simple le but du script s'affiche sur le terminal, sans que son code principal, écrit dans la boucle for ne s'exécute.
     \end{justify}
+
+    \begin{justify}
+    	Dans une boucle
+    \end{justify}
+
 
     % ------------
 
