--- a/docs/fr/devtools/bin-generation.tex
+++ b/docs/fr/devtools/bin-generation.tex
@@ -73,16 +73,16 @@
 % ----------------------------------------
 % Définition des informations du document.
 
-\title{\color{sec1}Fonctionnement }\color{text}
+\title{\color{sec1}Fonctionnement du script\\ \color{sec2}bin-generation.sh\color{sec1}}\color{text}
 \author{Dimitri OBEID}
 \pagestyle{fancy}
 
 \pdfinfo{
-  /Title    (Fonctionnement )
+  /Title    (Fonctionnement du script bin-generation.sh)
   /Author   (Dimitri OBEID)
   /Creator  (Dimitri OBEID)
   /Producer (Dimitri OBEID)
-  /Subject  (Fonctionnement )
+  /Subject  (Fonctionnement du script bin-generation.sh)
   /Keywords ()
 }
 
