Added the "docs/00 DATA/txt/" resources directory and improved the comments decoration of several LaTeX file

--- a/docs/fr/Test.tex
+++ b/docs/fr/Test.tex
@@ -106,4 +106,16 @@
     \hypertarget{contents}{}
     \tableofcontents
     \newpage
+
+    \color{sec1}
+    \section{}\color{text}
+
+	% ------------
+
+    % ----------------------
+
+    % -----------------------------------------------
+
+    % /////////////////////////////////////////////////////////////////////////////////////////////// %
+
 \end{document}
