--- a/docs/en/devtools/desktop.tex
+++ b/docs/en/devtools/desktop.tex
@@ -113,4 +113,16 @@
     \hypertarget{contents}{}
     \tableofcontents
     \newpage
+
+    \color{sec1}
+    \section{}\color{text}
+
+	% ------------
+
+    % ----------------------
+
+    % -----------------------------------------------
+
+    % /////////////////////////////////////////////////////////////////////////////////////////////// %
+
 \end{document}
