--- a/docs/de/devtools/256-color-palette.tex
+++ b/docs/de/devtools/256-color-palette.tex
@@ -44,23 +44,23 @@
 % -------------------------------------------------------------------------------------------------------
 % Liste der definierten Farben (für das Layout und für den Themenwechsel beim Drucken der Dokumentation).
 
-% Definition von Farbe           % Normal | Bedruckbar   - Beschreibung
+% Definition von Farbe           % Normal       | Bedruckbar  - Beschreibung
 
-\definecolor{back}{HTML}{000000} % Schwarz | weiß   - Hintergrundfarbe des Dokuments.
-\definecolor{case}{HTML}{fcff00} % Gelb             - Farbe der "case"-Bedingungen.
-\definecolor{cmds}{HTML}{909090} % Grau             - Farbige Darstellung der Namen von Systembefehlen und ihrer Argumente.
-\definecolor{cond}{HTML}{be480a} % Ziegelstein      - Farbe der "if"-Bedingungen.
-\definecolor{func}{HTML}{800080} % Malve            - Farbe der Funktionen, die in jedem Modul des Frameworks Bash Utils definiert sind.
+\definecolor{back}{HTML}{000000} % Schwarz      | weiß        - Hintergrundfarbe des Dokuments.
+\definecolor{case}{HTML}{fcff00} % Gelb                       - Farbe der "case"-Bedingungen.
+\definecolor{cmds}{HTML}{909090} % Grau                       - Farbige Darstellung der Namen von Systembefehlen und ihrer Argumente.
+\definecolor{cond}{HTML}{be480a} % Ziegelstein                - Farbe der "if"-Bedingungen.
+\definecolor{func}{HTML}{800080} % Malve                      - Farbe der Funktionen, die in jedem Modul des Frameworks Bash Utils definiert sind.
 
-\definecolor{loop}{HTML}{00ffff} % Cyan             - Farbe der Locken.
-\definecolor{main}{HTML}{8F00FF} % Violett          - Farbe der Funktionen des Hauptskripts.
-\definecolor{path}{HTML}{bfff00} % Limette          - Farbe der Pfade zu Ordnern und Dateien.
-\definecolor{sec1}{HTML}{ff0000} % Rot              - Farbe von Haupt- und Toptiteln.
-\definecolor{sec2}{HTML}{00ff00} % Grün             - Farbe von Titeln der zweiten Ebene.
+\definecolor{loop}{HTML}{00ffff} % Cyan                       - Farbe der Locken.
+\definecolor{main}{HTML}{8F00FF} % Violett                    - Farbe der Funktionen des Hauptskripts.
+\definecolor{path}{HTML}{bfff00} % Limette                    - Farbe der Pfade zu Ordnern und Dateien.
+\definecolor{sec1}{HTML}{ff0000} % Rot                        - Farbe von Haupt- und Toptiteln.
+\definecolor{sec2}{HTML}{00ff00} % Grün                       - Farbe von Titeln der zweiten Ebene.
 
-\definecolor{sec3}{HTML}{0060ff} % Blau             - Farbe von Titeln der dritten Ebene.
-\definecolor{text}{HTML}{ffffff} % weiß | Schwarz   - Farbe des normalen Textes.
-\definecolor{vars}{HTML}{FF7F00} % Orange           - Farbe der Namen von Parametern und Variablen.
+\definecolor{sec3}{HTML}{0060ff} % Blau                       - Farbe von Titeln der dritten Ebene.
+\definecolor{text}{HTML}{ffffff} % weiß         | Schwarz     - Farbe des normalen Textes.
+\definecolor{vars}{HTML}{FF7F00} % Orange                     - Farbe der Namen von Parametern und Variablen.Variablen.
 
 
 % ---------------------------------------------------------------------
