--- a/docs/tr/Renk kodu - DF331.tex
+++ b/docs/tr/Renk kodu - DF331.tex
@@ -1,28 +1,28 @@
 \documentclass[a4paper,10pt]{article}
 
-\usepackage[utf8]{inputenc}             % Encodage du texte (caractères accentués).
-\usepackage[french]{babel}              % Langue du document.
-\usepackage[sfdefault]{roboto}          % Police d'écriture utilisée dans le document.
-\usepackage[T1]{fontenc}                % Règle de césure pour les caractères accentués (pour le compilateur LaTeX).
+\usepackage[utf8]{inputenc}             % Metin kodlaması (aksanlı karakterler).
+\usepackage[turkish]{babel}             % Belge dili.
+\usepackage[sfdefault]{roboto}          % Belgede kullanılan yazı tipi.
+\usepackage[T1]{fontenc}                % Aksanlı karakterler için tireleme kuralı (LaTeX derleyicisi için).
 
-\usepackage{fancyhdr}                   % Ajout d'en-têtes et de pieds de page à chaque page du document.
-\usepackage{graphicx}                   % Ajout d'images dans le document.
-\usepackage{hyperref}                   % Création de liens cliquables pointant vers d'autres parties du document.
-\usepackage{parskip}                    % Sauts de ligne déterminables entre chaque paragraphe.
+\usepackage{fancyhdr}                   % Belgenin her sayfasına üstbilgi ve altbilgi ekleyin.
+\usepackage{graphicx}                   % Belgeye bir görüntü ekleyin.
+\usepackage{hyperref}                   % Belgenin diğer bölümlerine tıklanabilir bağlantıların oluşturulması.
+\usepackage{parskip}                    % Her paragraf arasında satır sonu seçimi.
 
-% Ne pas oublier de modifier l'option "svgnames" (couleurs définies sur le modèle RGB, meilleur pour
-% l'affichage numérique) en option "dvipsnames" (basé sur le modèle de couleur CJMB (CMYK), meilleur
-% pour l'impression) via le script de conversion en format imprimable.
+% Yazdırılabilir formata dönüştürmek için kod aracılığıyla "svgnames" seçeneğini (RGB modeline
+% göre tanımlanan renkler, dijital görüntüleme için ideal) "dvipsnames" seçeneğiyle (CMYK renk
+% modeline dayalı, baskı için ideal) değiştirmeyi unutmayın.
 
-\usepackage[usenames,svgnames]{xcolor}                      % Coloration du texte.
-\usepackage{verbatim}                                       % Mise en page des paragraphes.
+\usepackage[usenames,svgnames]{xcolor}                      % Metnin renklendirilmesi.
+\usepackage{verbatim}                                       % Paragraf düzeni.
 
-\usepackage[document]{ragged2e}                             % Justification du texte.
-\usepackage[a4paper,margin=1in,footskip=0.25in]{geometry}   % Mise en page du document.
+\usepackage[document]{ragged2e}                             % Metnin gerekçelendirilmesi.
+\usepackage[a4paper,margin=1in,footskip=0.25in]{geometry}   % Belge düzeni.
 
 
-% ----------------------------------------------------------------------------------------------------------------
-% Pour plus d'informations et de documentation sur ces paquets LaTeX, veuillez vous référer aux liens ci-dessous :
+% -----------------------------------------------------------------------------------------------
+% Bu LaTeX paketleri hakkında daha fazla bilgi ve belge için lütfen aşağıdaki bağlantılara bakın:
 
 % inputenc  : https://www.ctan.org/pkg/inputenc
 % babel     : https://www.ctan.org/pkg/babel
@@ -41,63 +41,63 @@
 % geometry  : https://www.ctan.org/pkg/geometry
 
 
-% ------------------------------------------------------------------------------------------------------------------------
-% Liste des couleurs définies (pour la mise en page et pour le changement de thème pour l'impression de la documentation).
+% ------------------------------------------------------------------------------------------------------------------
+% Tanımlanmış renklerin listesi (düzen amacıyla ve belgeleri yazdırırken temaları değiştirmeyi kolaylaştırmak için).
 
-% Définition de la couleur       % Normal   | Imprimable    - Description
+% Renk tanımlaması               % Normal   | Yazdırılabilir  - Açıklama
 
-\definecolor{back}{HTML}{000000} % Noir     | Blanc         - Couleur de fond du document.
-\definecolor{case}{HTML}{fcff00} % Jaune                    - Couleur des conditions "case".
-\definecolor{cmds}{HTML}{909090} % Gris                     - Couleur des noms de commandes du système et de leurs arguments.
-\definecolor{cond}{HTML}{be480a} % Brique                   - Couleur des conditions "if".
-\definecolor{func}{HTML}{800080} % Mauve                    - Couleur des fonctions définies dans chaque module du framework Bash Utils.
+\definecolor{back}{HTML}{000000} % Siyah    | Beyaz           - Renk: belge arka planı.
+\definecolor{case}{HTML}{fcff00} % Sarı                       - Renk: "case" koşulları.
+\definecolor{cmds}{HTML}{909090} % Gri                        - Renk: sistem komutlarının ve argümanlarının adları.
+\definecolor{cond}{HTML}{be480a} % Tuğla                      - Renk: "if" koşulları.
+\definecolor{func}{HTML}{800080} % Mor                        - Renk: Bash Utils çerçevesinin her bir modülünde tanımlanan işlevler.
 
-\definecolor{loop}{HTML}{00ffff} % Cyan                     - Couleur des boucles.
-\definecolor{main}{HTML}{8F00FF} % Violet                   - Couleur des fonctions du script principal.
-\definecolor{path}{HTML}{bfff00} % Citron vert              - Couleur des chemins de dossiers et de fichiers.
-\definecolor{sec1}{HTML}{ff0000} % Rouge                    - Couleur des titres principaux et de premier niveau.
-\definecolor{sec2}{HTML}{00ff00} % Vert                     - Couleur des titres de deuxième niveau.
+\definecolor{loop}{HTML}{00ffff} % Camgöbeği mavi             - Renk: bukleler.
+\definecolor{main}{HTML}{8F00FF} % Menekşe                    - Renk: orijinal bilgisayar senaryosunun işlevleri
+\definecolor{path}{HTML}{bfff00} % Kireç                      - Renk: klasör ve dosya yolları.
+\definecolor{sec1}{HTML}{ff0000} % Kırmızı                    - Renk: ana ve üst düzey başlıklar.
+\definecolor{sec2}{HTML}{00ff00} % Yeşil                      - Renk: ikinci seviye başlıklar.
 
-\definecolor{sec3}{HTML}{0060ff} % Bleu                     - Couleur des titres de troisième niveau.
-\definecolor{text}{HTML}{ffffff} % Blanc    | Noir          - Couleur du texte normal.
-\definecolor{vars}{HTML}{FF7F00} % Orange                   - Couleur des noms des paramètres et des variables.
+\definecolor{sec3}{HTML}{0060ff} % Mavi                       - Renk: üçüncü seviye başlıklar.
+\definecolor{text}{HTML}{ffffff} % Beyaz    | Siyah           - Renk: normal metin.
+\definecolor{vars}{HTML}{FF7F00} % Turuncu                    - Renk: parametre ve değişken adları.
 
 
-% ------------------------------------------------------------------------
-% Définition de la police d'écriture et de la couleur de fond du document.
+% ---------------------------------------------------
+% Belgenin yazı tipini ve arka plan rengini tanımlar.
 
 \fontfamily{Roboto}
 
 \pagecolor{back}
 
 
-% ----------------------------------------
-% Définition des informations du document.
+% --------------------------
+% Belge bilgilerinin tanımı.
 
-\title{\color{red}Code \color{orange}couleur \color{yellow}de \color{green}la \color{blue}documentation \\\color{violet}officielle \color{red}du \color{orange}framework \color{yellow}Bash \color{green}Utils}\color{text}
+\title{\color{red}Resmi \color{orange}Bash \color{yellow}Utils \color{green}çerçeve \\\color{blue}belgeleri \color{violet}için \color{red}renk \color{orange}kodu}\color{text}
 \author{Dimitri OBEID}
 \pagestyle{fancy}
 
 \pdfinfo{
-  /Title    (Code couleur de la documentation officielle du framework Bash Utils)
+  /Title    (Resmi Bash Utils çerçeve belgeleri için renk kodu)
   /Author   (Dimitri OBEID)
   /Creator  (Dimitri OBEID)
   /Producer (Dimitri OBEID)
-  /Subject  (Code couleur de la documentation officielle du framework Bash Utils)
+  /Subject  (Resmi Bash Utils çerçeve belgeleri için renk kodu)
   /Keywords ()
 }
 
 
-% ------------------------------------------------------------
-% Mise en page des paragraphes et des en-têtes de chaque page.
+% --------------------------------------------
+% Paragrafların ve sayfa başlıklarının düzeni.
 
 \setlength{\parskip}{1em}
 
 \setlength{\headheight}{13pt}
 
 
-% ------------------
-% Début du document.
+% --------------------
+% Belgenin başlangıcı.
 
 \begin{document}
     \maketitle
@@ -109,6 +109,14 @@
 
     \color{sec1}
     \section{}\color{text}
+
+    % ------------
+
+    % ----------------------
+
+    % -----------------------------------------------
+
+    % /////////////////////////////////////////////////////////////////////////////////////////////// %
 
 \end{document}
 
