Updating the "256-color-palette.tex" file from the French LaTeX documentation

--- a/docs/fr/devtools/256-color-palette.tex
+++ b/docs/fr/devtools/256-color-palette.tex
@@ -127,11 +127,23 @@
     \subsection{Fonctionnement du script}\color{text}
 
     \begin{justify}
-        En cas de passage de la valeur "-h" ou "--help" en premier argument, un simple message résumant de manière très simple le but du script s'affiche sur le terminal, sans que son code principal, écrit dans la boucle for ne s'exécute.
+        En cas de passage de la valeur "-h" ou "--help" en premier argument, un simple message résumant de manière très simple le but du script s'affiche sur le terminal, sans que son code principal, écrit dans la boucle \textbf{\color{loop}for} ne s'exécute.
     \end{justify}
 
     \begin{justify}
-    	Dans une boucle
+    	Algorithme de la boucle \textbf{\color{loop}for} :
+
+    	\textbf{\color{loop}Tant que} la valeur de la variable \textbf{\color{vars}\$i}, initialisée à 16 (valeur correspondant au numéro de début de la plage des codes couleurs non-systèmes allant jusqu'au numéro 255 dans la table de couleurs XTERM) est strictement inférieure à 256, \textbf{\color{loop}alors} :
+
+    	\begin{itemize}
+    	    \item On affiche la
+
+    	    \item On affiche la
+
+    	    \item \textbf{\color{cond}Si}
+    	\end{itemize}
+
+    	\textbf{\color{loop}Fin de la boucle « pour »}
     \end{justify}
 
 
