Added more data in the French "devtools" documentation and started the addition of the same data in the same English documentation files

--- a/docs/fr/devtools/lib-compilerV3.tex
+++ b/docs/fr/devtools/lib-compilerV3.tex
@@ -74,7 +74,7 @@
 % ----------------------------------------
 % Définition des informations du document.
 
-\title{\color{sec1}Fonctionnement du compilateur du framework Bash Utils}\color{text}
+\title{\color{sec1}Fonctionnement du compilateur du \\framework Bash Utils \textbf{\color{sec2}lib-compilerV3.sh}}\color{text}
 \author{Dimitri OBEID}
 \pagestyle{fancy}
 
@@ -112,4 +112,13 @@
     \end{abstract}
 
     \section{}
+
+    % ------------
+
+    % ----------------------
+
+    % -----------------------------------------------
+
+    % /////////////////////////////////////////////////////////////////////////////////////////////// %
+
 \end{document}
