--- a/docs/fr/devtools/256-color-palette.tex
+++ b/docs/fr/devtools/256-color-palette.tex
@@ -74,16 +74,16 @@
 % ----------------------------------------
 % Définition des informations du document.
 
-\title{\color{sec1}Fonctionnement du script\\ \color{sec2}256-color-palette.sh\color{sec1}}\color{text}
+\title{\color{sec1}Fonctionnement du script\\ \textbf{\color{sec2}256-color-palette.sh}}\color{text}
 \author{Dimitri OBEID}
 \pagestyle{fancy}
 
 \pdfinfo{
-  /Title    (Fonctionnement du script 256-color-palette.sh)
+  /Title    (Fonctionnement du script "256-color-palette.sh")
   /Author   (Dimitri OBEID)
   /Creator  (Dimitri OBEID)
   /Producer (Dimitri OBEID)
-  /Subject  (Fonctionnement du script 256-color-palette.sh)
+  /Subject  (Fonctionnement du script "256-color-palette.sh")
   /Keywords ()
 }
 
