--- a/docs/fr/devtools/lib-install.tex
+++ b/docs/fr/devtools/lib-install.tex
@@ -74,16 +74,16 @@
 % ----------------------------------------
 % Définition des informations du document.
 
-\title{\color{sec1}Fonctionnement }\color{text}
+\title{\color{sec1}Fonctionnement du script\\ \textbf{\color{sec2}lib-install.sh}}\color{text}
 \author{Dimitri OBEID}
 \pagestyle{fancy}
 
 \pdfinfo{
-  /Title    (Fonctionnement )
+  /Title    (Fonctionnement du script "lib-install.sh")
   /Author   (Dimitri OBEID)
   /Creator  (Dimitri OBEID)
   /Producer (Dimitri OBEID)
-  /Subject  (Fonctionnement )
+  /Subject  (Fonctionnement du script "lib-install.sh")
   /Keywords ()
 }
 
@@ -112,4 +112,13 @@
     \end{abstract}
 
     \section{}
+
+    % ------------
+
+    % ----------------------
+
+    % -----------------------------------------------
+
+    % /////////////////////////////////////////////////////////////////////////////////////////////// %
+
 \end{document}
