--- a/docs/fr/devtools/mr-clean.tex
+++ b/docs/fr/devtools/mr-clean.tex
@@ -74,16 +74,16 @@
 % ----------------------------------------
 % Définition des informations du document.
 
-\title{\color{sec1}Fonctionnement }\color{text}
+\title{\color{sec1}Fonctionnement du script\\ \textbf{\color{sec2}mr-clean.sh}}\color{text}
 \author{Dimitri OBEID}
 \pagestyle{fancy}
 
 \pdfinfo{
-  /Title    (Fonctionnement )
+  /Title    (Fonctionnement du script "mr-clean.sh")
   /Author   (Dimitri OBEID)
   /Creator  (Dimitri OBEID)
   /Producer (Dimitri OBEID)
-  /Subject  (Fonctionnement )
+  /Subject  (Fonctionnement du script "mr-clean.sh")
   /Keywords ()
 }
 
