Added more data in the English "devtools" documentation

--- a/docs/en/devtools/256-color-palette.tex
+++ b/docs/en/devtools/256-color-palette.tex
@@ -93,7 +93,7 @@
   /Author   (Dimitri OBEID)
   /Creator  (Dimitri OBEID)
   /Producer (Dimitri OBEID)
-  /Subject  (Deciphering the mechanics behind the '256-color-palette.sh' script)
+  /Subject  (Deciphering the mechanics behind the "256-color-palette.sh" script)
   /Keywords ()
 }
 
