--- a/docs/en/devtools/latex-compiler.tex
+++ b/docs/en/devtools/latex-compiler.tex
@@ -84,16 +84,16 @@
 % -----------------------------------------------
 % Definition of the informations of the document.
 
-\title{\color{sec1}Bash Utils framework }\color{text}
+\title{\color{sec1}Deciphering the mechanics behind the \\ \textbf{\color{sec2}latex-compiler.sh} script}\color{text}
 \author{Dimitri OBEID}
 \pagestyle{fancy}
 
 \pdfinfo{
-  /Title    (Bash Utils framework )
+  /Title    (Deciphering the mechanics behind the "latex-compiler.sh" script)
   /Author   (Dimitri OBEID)
   /Creator  (Dimitri OBEID)
   /Producer (Dimitri OBEID)
-  /Subject  (Bash Utils framework )
+  /Subject  (Deciphering the mechanics behind the "latex-compiler.sh" script)
   /Keywords ()
 }
 
