--- a/docs/en/devtools/lib-compilerV3.tex
+++ b/docs/en/devtools/lib-compilerV3.tex
@@ -84,16 +84,16 @@
 % -----------------------------------------------
 % Definition of the informations of the document.
 
-\title{\color{sec1}Bash Utils framework compiler documentation}\color{text}
+\title{\color{sec1}Bash Utils framework compiler documentation and deciphering the mechanics behind the \\ \textbf{\color{sec2}lib-compilerV3.sh} script}\color{text}
 \author{Dimitri OBEID}
 \pagestyle{fancy}
 
 \pdfinfo{
-  /Title    (Bash Utils framework compiler documentation)
+  /Title    (Bash Utils framework compiler documentation and deciphering the mechanics behind the "lib-compilerV3.sh" script)
   /Author   (Dimitri OBEID)
   /Creator  (Dimitri OBEID)
   /Producer (Dimitri OBEID)
-  /Subject  (Bash Utils framework compiler documentation)
+  /Subject  (Bash Utils framework compiler documentation and deciphering the mechanics behind the "lib-compilerV3.sh" script)
   /Keywords ()
 }
 
