Starting to write the full LaTeX code of the "Locale.tex" file from the French documentation

--- a/docs/fr/modules/04) Functions/main/Errors.tex
+++ b/docs/fr/modules/04) Functions/main/Errors.tex
@@ -109,7 +109,7 @@
     \section{Présentation}\color{text}
 
     \color{sec2}
-    \subsection{Présentation}\color{text}
+    \subsection{Description}\color{text}
 
     \begin{justify}
         Ce fichier source inclut des fonctions servant à la gestion d'erreurs.
@@ -136,6 +136,7 @@
     \begin{justify}
         \textbf{*} : Voir la variable \textbf{\color{vars}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{path}/lib/functions/main} mentionnée dans la sous-sous-catégorie \textbf{\color{sec3}Variables globales externes et / ou variables d'environnement appelées}.
     \end{justify}
+
     % ------------
 
     % ----------------------
@@ -149,6 +150,7 @@
     \textbf{Fonction : \color{func}}\\[1\baselineskip]
 
     \textbf{Fichier de définition :} \textbf{\color{path}}\\[1\baselineskip]
+
     % ------------
 
     % ----------------------
@@ -186,10 +188,10 @@
     \color{sec1}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
 
     \color{sec1}
-    \section{Fonctions}\color{text}
+    \section{Fonctions - Section « ERRORS HANDLING FUNCTIONS »}\color{text}
 
     \color{sec2}
-    \subsection{Sous-section CLASSIC ERRORS HANDLING}\color{text}
+    \subsection{Sous-section « CLASSIC ERRORS HANDLING »}\color{text}
 
     \color{sec3}
     \subsubsection{BU.Main.Errors.HandleSmallErrors}\color{text}
