--- a/docs/fr/modules/04) Functions/main/Locale.tex
+++ b/docs/fr/modules/04) Functions/main/Locale.tex
@@ -113,4 +113,241 @@
 
     \color{sec2}
     \subsection{Description}\color{text}
+
+    \begin{justify}
+        Ce fichier source inclut des fonctions servant à la gestion de la langue du système.
+    \end{justify}
+
+    % ------------
+
+    % ----------------------
+
+    % -----------------------------------------------
+
+    \color{sec2}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
+
+    \color{sec2}
+    \subsection{Définitions des éléments mentionnés}\color{text}
+
+    \color{sec3}
+    \subsubsection{Chemins des fichiers}\color{text}
+
+    \textbf{Nom du fichier : \color{path}}\\[1\baselineskip]
+
+    \textbf{Dossier parent : \color{path}}\\[1\baselineskip]
+
+    \begin{justify}
+        \textbf{*} : Voir la variable \textbf{\color{vars}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{path}/lib/functions/main} mentionnée dans la sous-sous-catégorie \textbf{\color{sec3}Variables globales externes et / ou variables d'environnement appelées}.
+    \end{justify}
+
+    % ------------
+
+    % ----------------------
+
+    \color{path}\par\noindent\rule{\textwidth}{0.4pt}\color{text}\\[1\baselineskip]
+
+
+    \color{sec3}
+    \subsubsection{Fonctions}\color{text}
+
+    \textbf{Fonction : \color{func}}\\[1\baselineskip]
+
+    \textbf{Fichier de définition :} \textbf{\color{path}}\\[1\baselineskip]
+
+    % ------------
+
+    % ----------------------
+
+    \color{sec3}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
+
+    \color{sec3}
+    \subsubsection{Variables globales externes et / ou variables d'environnement appelées}\color{text}
+
+    \textbf{Variable : \color{vars}}\\[1\baselineskip]
+
+    \textbf{Description :} .\\[1\baselineskip]
+
+    \textbf{Fichier de définition : \color{path}}\\[1\baselineskip]
+
+
+    % ------------
+
+    \par\noindent\rule{\textwidth}{0.4pt}\\[1\baselineskip]
+
+    \textbf{Variable : \color{vars}}\\[1\baselineskip]
+
+    \textbf{Description :} .\\[1\baselineskip]
+
+    \textbf{Fichier de définition : \color{path}}\\[1\baselineskip]
+
+    % ------------
+
+    % ----------------------
+
+    % -----------------------------------------------
+
+    % /////////////////////////////////////////////////////////////////////////////////////////////// %
+
+    \color{sec1}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
+
+    \color{sec1}
+    \section{Fonctions - Section « LOCALE DISPLAY FUNCTIONS »}\color{text}
+
+    \color{sec2}
+    \subsection{Sous-section « OPTIMIZATION FUNCTIONS »}\color{text}
+
+    \color{sec3}
+    \subsubsection{BU.Main.Locale.CheckISO\_639\_1\_ValidCode}\color{text}
+
+    \textbf{Fonction : \color{func}BU.Main.Locale.CheckISO\_639\_1\_ValidCode}\setlength{\parskip}{1em}
+
+    % ------------
+
+    \par\noindent\rule{\textwidth}{0.4pt}
+
+    \begin{justify}
+        \textbf{Description :}\\[1\baselineskip]
+        Cette fonction
+    \end{justify}
+
+    % ------------
+
+    \par\noindent\rule{\textwidth}{0.4pt}\\
+
+    \begin{justify}
+        \textbf{Paramètres :}\\[1\baselineskip]
+        Aucun paramètre n'est supporté.
+    \end{justify}
+
+    % ------------
+
+    \par\noindent\rule{\textwidth}{0.4pt}
+
+    \begin{justify}
+        \textbf{Fonctionnement :}\\[1\baselineskip]
+        La fonction \textbf{\color{func}BU.Main.Locale.CheckISO\_639\_1\_ValidCode}
+    \end{justify}
+
+    % ------------
+
+    \par\noindent\rule{\textwidth}{0.4pt}
+
+    \begin{justify}
+        \textbf{Utilisation :}\\[1\baselineskip]
+        Appelez cette fonction
+    \end{justify}
+
+    % ------------
+
+    % ----------------------
+
+    \color{sec3}\par\noindent\rule{\textwidth}{0.4pt}\color{text}\setlength{\parskip}{1em}
+
+    \color{sec3}
+    \subsubsection{BU.Main.Locale.PrintLanguageName.Optimize.HandleParameterErrorsLibCompiler}\color{text}
+
+    \textbf{Fonction : \color{func}BU.Main.Locale.PrintLanguageName.Optimize.HandleParameterErrorsLibCompiler}\setlength{\parskip}{1em}
+
+    % ------------
+
+    \par\noindent\rule{\textwidth}{0.4pt}
+
+    \begin{justify}
+        \textbf{Description :}\\[1\baselineskip]
+        Cette fonction
+    \end{justify}
+
+    % ------------
+
+    \par\noindent\rule{\textwidth}{0.4pt}\\
+
+    \begin{justify}
+        \textbf{Paramètres :}\\[1\baselineskip]
+        Aucun paramètre n'est supporté.
+    \end{justify}
+
+    % ------------
+
+    \par\noindent\rule{\textwidth}{0.4pt}
+
+    \begin{justify}
+        \textbf{Fonctionnement :}\\[1\baselineskip]
+        La fonction \textbf{\color{func}BU.Main.Locale.PrintLanguageName.Optimize.HandleParameterErrorsLibCompiler}
+    \end{justify}
+
+    % ------------
+
+    \par\noindent\rule{\textwidth}{0.4pt}
+
+    \begin{justify}
+        \textbf{Utilisation :}\\[1\baselineskip]
+        Appelez cette fonction
+    \end{justify}
+
+    % ------------
+
+    % ----------------------
+
+    \color{sec3}\par\noindent\rule{\textwidth}{0.4pt}\color{text}\setlength{\parskip}{1em}
+
+    \color{sec3}
+    \subsubsection{BU.Main.Locale.PrintLanguageName.Optimize}\color{text}
+
+    \textbf{Fonction : \color{func}BU.Main.Locale.PrintLanguageName.Optimize}\setlength{\parskip}{1em}
+
+    % ------------
+
+    \par\noindent\rule{\textwidth}{0.4pt}
+
+    \begin{justify}
+        \textbf{Description :}\\[1\baselineskip]
+        Cette fonction
+    \end{justify}
+
+    % ------------
+
+    \par\noindent\rule{\textwidth}{0.4pt}\\
+
+    \begin{justify}
+        \textbf{Paramètres :}\\[1\baselineskip]
+        Aucun paramètre n'est supporté.
+    \end{justify}
+
+    % ------------
+
+    \par\noindent\rule{\textwidth}{0.4pt}
+
+    \begin{justify}
+        \textbf{Fonctionnement :}\\[1\baselineskip]
+        La fonction \textbf{\color{func}BU.Main.Locale.PrintLanguageName.Optimize}
+    \end{justify}
+
+    % ------------
+
+    \par\noindent\rule{\textwidth}{0.4pt}
+
+    \begin{justify}
+        \textbf{Utilisation :}\\[1\baselineskip]
+        Appelez cette fonction
+    \end{justify}
+
+    % ------------
+
+    % ----------------------
+
+    % -----------------------------------------------
+
+    \color{sec2}\par\noindent\rule{\textwidth}{0.4pt}\color{text}\setlength{\parskip}{1em}
+
+    \color{sec2}
+    \subsection{Sous-section « PRINTING LOCALE »}\color{text}
+
+  	% ------------
+
+    % ----------------------
+
+    % -----------------------------------------------
+
+    % /////////////////////////////////////////////////////////////////////////////////////////////// %
+
 \end{document}
