--- a/docs/sv/devtools/latex-create-file-arch-lang.tex
+++ b/docs/sv/devtools/latex-create-file-arch-lang.tex
@@ -74,16 +74,16 @@
 % ----------------------------------
 % Definition av dokumentinformation.
 
-\title{\color{red}Bash Utils-framework...}\color{text}
+\title{\color{red}Funktionalitet av Bash-skriptet \\ \textbf{\color{sec2}latex-create-file-arch-lang.sh}}\color{text}
 \author{Dimitri OBEID}
 \pagestyle{fancy}
 
 \pdfinfo{
-  /Title    (Bash Utils-framework...)
+  /Title    (Funktionalitet av Bash-skriptet "latex-create-file-arch-lang.sh")
   /Author   (Dimitri OBEID)
   /Creator  (Dimitri OBEID)
   /Producer (Dimitri OBEID)
-  /Subject  (Bash Utils-framework...)
+  /Subject  (Funktionalitet av Bash-skriptet "latex-create-file-arch-lang.sh")
   /Keywords ()
 }
 
