Added support for Swedish and Turkish help in the "256-color-palette" script, and updated its English and French documentations

--- a/docs/en/devtools/256-color-palette.tex
+++ b/docs/en/devtools/256-color-palette.tex
@@ -144,7 +144,7 @@
 
     \begin{justify}
         \begin{itemize}
-            \item German, English, Spanish, French, Indonesian, Portuguese, Russian, Ukrainian and Chinese.
+            \item German, English, Spanish, French, Indonesian, Portuguese, Russian, Swedish, Turkish, Ukrainian and Chinese.
         \end{itemize}
 
     \end{justify}
