--- a/docs/fr/devtools/256-color-palette.tex
+++ b/docs/fr/devtools/256-color-palette.tex
@@ -136,7 +136,7 @@
 
     \begin{justify}
         \begin{itemize}
-            \item Allemand, anglais, espagnol, français, indonésien, portuguais, russe, ukrainien et chinois.
+            \item Allemand, anglais, espagnol, français, indonésien, portuguais, russe, suédois, turc, ukrainien et chinois.
         \end{itemize}
 
     \end{justify}
